--- a/shop/templates/shop/shop.html
+++ b/shop/templates/shop/shop.html
@@ -54,6 +54,9 @@
       {% else %}
       <p class="card-text">Nothing is on sale in this sale.</p>
       {% endif %}
+      <div>
+        This sale ends on {{ sale.end|date }} at {{ sale.end|time:"H:i" }}.
+      </div>
     </div>
   </div>
   {% endfor %}
