--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -83,10 +83,18 @@
                   <a class="dropdown-item" href="https://society.ecs.soton.ac.uk/about/credits.php">Credits</a>
                 </div>
               </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="{% url 'portal:overview' %}" id="navbarPortalDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Portal
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarPortalDropdown">
+                  <a class="dropdown-item" href="{% url 'portal:overview' %}">Portal Overview</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="{% url 'feedback:submit' %}">Feedback</a>
+                  <a class="dropdown-item" href="{% url 'shop:shop' %}">Shop</a>
+                </div>
+              </li>
             </ul>
-            <span class="nav-item">
-              <a class="nav-link" href="{% url 'portal:overview' %}">Portal</a>
-            </span>
           </div>
         </nav>
       </div>
