Update sale time display

--- a/shop/templates/shop/merch1819/merch1819.html
+++ b/shop/templates/shop/merch1819/merch1819.html
@@ -38,10 +38,10 @@
       Within each category you can find our classic logo/slogan designs, as well as a bunch of new merch for this year, including the winners of the T-Shirt Design Contest!
     </p>
     <p>
-      The store is only open for <b>1 week</b> so grab your ECSS gear while you can!
+      The store is only open for over 1 week so grab your ECSS gear while you can!
     </p>
     <p>
-      This sale ends on {{ sale.end|date }} at {{ sale.end|time:"H:i" }}.
+      <b>This sale ends on {{ sale.end|date }} at {{ sale.end|time:"H:i" }}.</b>
     </p>
   </div>
   <section>
