--- a/shop/templates/shop/shop.html
+++ b/shop/templates/shop/shop.html
@@ -22,7 +22,7 @@
     <div class="card-body">
       {% if sale.is_future %}
       <div class="alert alert-warning">
-        This sale is not yet open.
+        This sale is not yet open. This sale opens between {{ sale.start|date }} {{ sale.start|time:"H:i" }} and {{ sale.end|date }} {{ sale.end|time:"H:i" }}.
       </div>
       {% endif %}
       {% if sale.item_set.all %}
@@ -55,7 +55,7 @@
       <p class="card-text">Nothing is on sale in this sale.</p>
       {% endif %}
       <div>
-        This sale ends on {{ sale.end|date }} at {{ sale.end|time:"H:i" }}.
+        <b>This sale ends on {{ sale.end|date }} at {{ sale.end|time:"H:i" }}.</b>
       </div>
     </div>
   </div>
