--- a/shop/templates/shop/item.html
+++ b/shop/templates/shop/item.html
@@ -58,7 +58,7 @@
       <div class="col-md-7">
         {% if item.sale.is_future %}
         <div class="alert alert-warning">
-          Sale for this item is not yet open.
+          Sale for this item is not yet open. The sale opens between {{ item.sale.start|date }} {{ item.sale.start|time:"H:i" }} and {{ item.sale.end|date }} {{ item.sale.end|time:"H:i" }}.
         </div>
         {% endif %}
         <div class="alert alert-danger" id="jsWarning">
@@ -105,6 +105,9 @@
             </small>
           </div>
         </form>
+        <div class="mt-3">
+          <b>Sale for this item ends on {{ item.sale.end|date }} at {{ item.sale.end|time:"H:i" }}.</b>
+        </div>
       </div>
     </div>
   </div>
