--- a/shop/templates/shop/merch1819/merch1819.html
+++ b/shop/templates/shop/merch1819/merch1819.html
@@ -43,6 +43,9 @@
     <p>
       <b>This sale ends on {{ sale.end|date }} at {{ sale.end|time:"H:i" }}.</b>
     </p>
+    <b>
+      We expect to have the merch produced and ready to give our in January after the Christmas break. If it comes earlier, we will do our best to give it out before the Christmas break. See <a href="#technicalInformation">technical information</a> to learn more.
+    </b>
   </div>
   <section>
     <h2>Slogans</h2>
@@ -75,7 +78,7 @@
           Keep out of direct sunlight
         </li>
       </ul>
-      Don't fancy having slogans? Leave it blank is an option, or you can have "Electronics and Computer Science" saying there.
+      Don't fancy having slogans? Leave it blank is an option, or you can have "Electronics and Computer Science, University of Southampton" saying there.
     </div>
   </section>
   <section>
@@ -308,6 +311,20 @@
       </table>
     </div>
   </section>
+  <section id="technicalInformation">
+    <h2>Technical Information</h2>
+    <hr>
+    <p>
+      We expect to have the merch produced and ready to give our in January after the Christmas break. If it comes earlier, we will do our best to give it out before the Christmas break.
+    </p>
+    <p>
+      All design pictures are just a preview and it is possible for the final designs to look slightly different, but they will still look great!
+    </p>
+    <p>
+      If you have any questions, message our Facebook page or send us an email and we will get back to you as soon as we can. 😊
+    </p>
+  </section>
+  <hr>
   <div>
     <small class="text-muted">
       If having difficulities purchasing on the website, please contact the committee.
