--- a/shop/templates/shop/item.html
+++ b/shop/templates/shop/item.html
@@ -108,6 +108,11 @@
         <div class="mt-3">
           <b>Sale for this item ends on {{ item.sale.end|date }} at {{ item.sale.end|time:"H:i" }}.</b>
         </div>
+        <div class="text-muted mt-3">
+          <small>
+            If having difficulities purchasing on the website, please contact the committee.
+          </small>
+        </div>
       </div>
     </div>
   </div>
