Update merch page

--- a/shop/templates/shop/merch1819/merch1819.html
+++ b/shop/templates/shop/merch1819/merch1819.html
@@ -51,33 +51,36 @@
     <h2>Slogans</h2>
     <hr>
     <div>
-      We love slogans, and you can have optional slogans on the back of some items. Here is a list of slogans available this year picked by the committee:
-      <ul>
-        <li>
-          Have you tried turning it off and on again?
-        </li>
-        <li>
-          No, I will not fix your computer.
-        </li>
-        <li>
-          ["hip", "hip"]
-        </li>
-        <li>
-          There is no place like 127.0.0.1
-        </li>
-        <li>
-          #titanic: { float:none; }
-        </li>
-        <li>
-          Byte me
-        </li>
-        <li>
-          Switches be trippin'
-        </li>
-        <li>
-          Keep out of direct sunlight
-        </li>
-      </ul>
+      We love slogans, and you can have optional slogans on the back of some of the hoodies and sweatshirts (except the Half-logo Graphic ones and T-shirt Contest Winner Sweatshirts).
+      <div class="mt-3">
+        Here is a list of slogans available this year picked by the committee:
+        <ul>
+          <li>
+            Have you tried turning it off and on again?
+          </li>
+          <li>
+            No, I will not fix your computer.
+          </li>
+          <li>
+            ["hip", "hip"]
+          </li>
+          <li>
+            There is no place like 127.0.0.1
+          </li>
+          <li>
+            #titanic: { float:none; }
+          </li>
+          <li>
+            Byte me
+          </li>
+          <li>
+            Switches be trippin'
+          </li>
+          <li>
+            Keep out of direct sunlight
+          </li>
+        </ul>
+      </div>
       Don't fancy having slogans? Leave it blank is an option, or you can have "Electronics and Computer Science, University of Southampton" saying there.
     </div>
   </section>
@@ -315,7 +318,7 @@
     <h2>Technical Information</h2>
     <hr>
     <p>
-      We expect to have the merch produced and ready to give our in January after the Christmas break. If it comes earlier, we will do our best to give it out before the Christmas break.
+      We expect to have the merch produced and ready to give out in January after the Christmas break. If it comes earlier, we will do our best to give it out before the Christmas break.
     </p>
     <p>
       All design pictures are just a preview and it is possible for the final designs to look slightly different, but they will still look great!
