Remove merch sale links

--- a/website/templates/website/sports/sports.html
+++ b/website/templates/website/sports/sports.html
@@ -13,7 +13,7 @@
       <li><a href="{% url 'website:football' %}">Football</a></li>
       <li><a href="{% url 'website:netball' %}">Netball</a></li>
       <li><a href="{% url 'website:running' %}">Running</a></li>
-      <li><a href="{% url 'website:sports_others' %}">Others</a></li>
+      <li><a href="{% url 'website:sports-others' %}">Others</a></li>
     </ul>
   </p>
   <p>
