--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -77,7 +77,7 @@
                   <!--<a class="dropdown-item" href="#">Basketball</a>-->
                   <!--<a class="dropdown-item" href="#">Parkrun</a>-->
                   <a class="dropdown-item" href="{% url 'website:running' %}">Running</a>
-                  <a class="dropdown-item" href="{% url 'website:sports_others' %}">Others</a>
+                  <a class="dropdown-item" href="{% url 'website:sports-others' %}">Others</a>
                 </div>
               </li>
               <li class="nav-item dropdown">
@@ -104,14 +104,6 @@
                 </div>
               </li>
             </ul>
-
-            <!-- For merch sale-->
-            <span class="nav-item">
-              <a class="nav-link merch-nav-link" href="{% url 'shop:merch1819' %}">
-                2018/19 Merch
-              </a>
-            </span>
-
           </div>
         </nav>
       </div>
