--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -44,7 +44,7 @@
                 <a class="nav-link" href="{% url 'website:committee-overview' %}">Committee</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'website:societies-default' %}">Societies</a>
+                <a class="nav-link" href="{% url 'website:societies' %}">Societies</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="{% url 'website:sponsors' %}">Sponsors</a>
@@ -131,7 +131,7 @@
             <dd class="footer-item"><a href="{% url 'website:about' %}" class="footer-link">About</a></dd>
             <dd class="footer-item"><a href="{% url 'website:contact' %}" class="footer-link">Contact</a></dd>
             <dd class="footer-item"><a href="https://society.ecs.soton.ac.uk/filestore/index.php/s/FGMWH0tjcjnHRpe" class="footer-link">Meeting Minutes</a></dd>
-            <dd class="footer-item"><a href="{% url 'website:societies-default' %}" class="footer-link">Societies in ECS</a></dd>
+            <dd class="footer-item"><a href="{% url 'website:societies' %}" class="footer-link">Societies in ECS</a></dd>
             <dd class="footer-item"><a href="https://www.ecs.soton.ac.uk" class="footer-link">ECS</a></dd>
           </dl>
           <dl class="footer-list">
