Update CampusHack fb link

--- a/website/templates/website/events/campus-hack-19.html
+++ b/website/templates/website/events/campus-hack-19.html
@@ -45,7 +45,7 @@
       </div>
       <div class="row d-flex justify-content-around">
         <a href="https://www.eventbrite.co.uk/e/campus-hack-2019-tickets-55019631198" class="btn btn-lg btn-outline-campushack19 btn-campushack19 my-2">Sign Up on Eventbrite</a>
-        <a href="https://www.eventbrite.co.uk/e/campus-hack-2019-tickets-55019631198" class="btn btn-lg btn-outline-campushack19 btn-campushack19 my-2">View Event on Facebook</a>
+        <a href="https://www.facebook.com/events/2289596917737722/" class="btn btn-lg btn-outline-campushack19 btn-campushack19 my-2">View Event on Facebook</a>
       </div>
       <div class="mt-3">
         <h1>CampusHack19</h1>
