--- a/website/templates/website/events/campus-hack-19.html
+++ b/website/templates/website/events/campus-hack-19.html
@@ -12,8 +12,8 @@
 {% block content %}
 <div class="bg-campushack19 navbar-campushack19">
   <nav class="navbar navbar-expand-sm navbar-dark bg-campushack19 container">
-    <a class="navbar-brand" href="#campushack19">
-      CampusHack19
+    <a class="navbar-brand" href="#campushack19" aria-label="CampusHack19">
+      <img src="{% static 'website/images/campushack19-outline480.png' %}" height="50" alt="CampusHack19" aria-hidden="true">
     </a>
     <ul class="navbar-nav">
       <li class="nav-item">
@@ -35,9 +35,9 @@
   <section id="campushack19" class="pt-4 mb-0">
     <div class="container">
       <div class="d-flex justify-content-center">
-        <div class="logo-container-campushack19">
-          <img class="img-fluid" src="{% static 'website/content/events/campus-hack-19/logo-large.jpg' %}" alt="CampusHack19">
-        </div>
+        <h1 class="logo-container-campushack19">
+          <img class="img-fluid" src="{% static 'website/images/campushack19-full960.png' %}" alt="CampusHack19">
+        </h1>
       </div>
       <div class="color-campushack19 text-center my-3">
         <span class="date-campushack19">Sat 23th - Sun 24th Feb 2019</span><br>
@@ -46,10 +46,6 @@
       <div class="row d-flex justify-content-around">
         <a href="https://www.eventbrite.co.uk/e/campus-hack-2019-tickets-55019631198" class="btn btn-lg btn-outline-campushack19 btn-campushack19 my-2">Sign Up on Eventbrite</a>
         <a href="https://www.facebook.com/events/2289596917737722/" class="btn btn-lg btn-outline-campushack19 btn-campushack19 my-2">View Event on Facebook</a>
-      </div>
-      <div class="mt-3">
-        <h1>CampusHack19</h1>
-        <!--<p>Introduction goes here.</p>-->
       </div>
     </div>
     <div class="pics-campushack19 mt-4">
