Changes on CampusHack19 page

--- a/website/templates/website/events/campus-hack-19.html
+++ b/website/templates/website/events/campus-hack-19.html
@@ -78,7 +78,7 @@
     <div class="container">
       <h2>Bulletin Board</h2>
       <p>
-        CampusHack19 Bulletin Board will go live soon.
+        CampusHack19 Bulletin Board will go live soon...
       </p>
     </div>
   </section>
