Correct medal on sponsor page

--- a/website/templates/website/sponsors/sponsor.html
+++ b/website/templates/website/sponsors/sponsor.html
@@ -50,7 +50,7 @@
           <small class="text-muted"><i class="medal medal-silver"></i> Silver Sponsor</small>
           {% endif %}
           {% if current_sponsor.level == 'bronze' %}
-          <small class="text-muted"><i class="medal medal-silver"></i> Bronze Sponsor</small>
+          <small class="text-muted"><i class="medal medal-bronze"></i> Bronze Sponsor</small>
           {% endif %}
         </p>
       </div>
