--- a/portal/templates/portal/base.html
+++ b/portal/templates/portal/base.html
@@ -55,6 +55,13 @@
         <li class="list-group-item">
           <ul class="list-unstyled">
             <li>
+              <a href="{% url 'election:elections' %}">Elections</a>
+            </li>
+          </ul>
+        </li>
+        <li class="list-group-item">
+          <ul class="list-unstyled">
+            <li>
               <a href="{% url 'feedback:submit' %}">Submit Feedback</a>
             </li>
             <li>
