--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -102,6 +102,7 @@
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="{% url 'feedback:submit' %}">Feedback</a>
                   <a class="dropdown-item" href="{% url 'shop:shop' %}">Shop</a>
+                  <a class="dropdown-item" href="{% url 'election:elections' %}">Elections</a>
                 </div>
               </li>
             </ul>
