--- a/election/templates/election/elections.html
+++ b/election/templates/election/elections.html
@@ -15,7 +15,7 @@
       <a href="{% url 'election:election' election=election.codename %}">
         <h2>{{ election.name }}</h2>
       </a>
-      {% if election.has_nomination and not election.is_nomination_current or not election.is_voting_current %}
+      {% if not election.is_election_current %}
       <div class="badge badge-warning">
         Not currently open
       </div>
