Change text for nomination

--- a/election/templates/election/nomination.html
+++ b/election/templates/election/nomination.html
@@ -24,7 +24,7 @@
   </p>
   {% else %}
   <p>
-    You are able to nominate yourself for as many roles, and each nomination requires two supports. You are able to support one nomination for each role.
+    You are able to nominate yourself for as many roles, and each nomination requires at least two supports before nomination closes. You are able to support one nomination for each role.
   </p>
   {% endif %}
   <div>
