--- a/election/templates/election/nominate.html
+++ b/election/templates/election/nominate.html
@@ -29,6 +29,16 @@
         {% endfor %}
         <input type="submit" class="btn btn-ecssweb" value="Submit Nomination">
       </form>
+      <div class="small text-muted mt-3">
+        <ul>
+          <li>
+            You can come back to this page to modify your nomination before nomination closes.
+          </li>
+          <li>
+            Each of your nomination will require two supports from two members before nomination closes.
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </section>
