--- a/election/templates/election/nomination.html
+++ b/election/templates/election/nomination.html
@@ -1,18 +1,37 @@
 {% extends 'portal/base.html' %}
 
 {% load static %}
+{% load election_extra %}
 
 {% block title %}Elections - ECSS{% endblock %}
 
+{% block pagestyle %}
+{{ block.super }}
+<style>
+.support {
+  color: darkred;
+}
+
+.support button {
+  margin: 0;
+  padding: 0;
+  background: none;
+  border: none;
+  color: darkred;
+}
+</style>
+{% endblock %}
+
 {% block portalcontent %}
-<div class="alert alert-warning">
-  Support feature will be implemented soon.
+{% if messages %}
+<div class="mt-3">
+  {% for message in messages %}
+  <div class="alert alert-success">
+    {{ message }}
+  </div>
+  {% endfor %}
 </div>
-{% for message in messages %}
-<div class="alert alert-success">
-  {{ message }}
-</div>
-{% endfor %}
+{% endif %}
 <section>
   <h1>{{ election.name }}</h1>
   <p>
@@ -24,38 +43,66 @@
   </p>
   {% else %}
   <p>
-    You are able to nominate yourself for as many roles, and each nomination requires at least two supports before nomination closes. You are able to support one nomination for each role.
+    You are able to nominate yourself for as many roles, and each nomination requires at least two supports before the nomination closes. You are able to support one nomination for each role and change your support before the nomination closes.
   </p>
   {% endif %}
   <div>
     <b>Nomination ends on {{ election.nomination_end|date }} {{ election.nomination_end|time:"H:i" }}.</b>
   </div>
-  <div class="list-group mt-3">
+  <div class="mt-3">
+    <input type="checkbox" id="description-checkbox" checked>
+    <label for="description-checkbox">Show roles description</label>
+  </div>
+  <div class="list-group">
     {% for position in election.position_set.all %}
     <div class="list-group-item">
       <h2>{{ position.name }}</h2>
-      <p>
+      <p class="position-description">
         <i>{{ position.description }}</i>
       </p>
       {% if perms.ecsswebauth.is_ecs_user %}
       <div>
-        <a href="{% url 'election:nomination' election.codename position.codename %}">Nominate for this role</a>
+        <a href="{% url 'election:nomination' election.codename position.codename %}">Nominate for {{ position.name }}</a>
       </div>
       {% endif %}
       {% if not position.nomination_set.all %}
       <p>
-        There is currently no nomination for this role.
+        There is currently no nomination for {{ position.name }}.
       </p>
       {% else %}
       <div>
         Current nominations:
+        {% if perms.ecsswebauth.is_ecs_user %}
+        <ul class="list-unstyled">
+        {% else %}
         <ul>
+        {% endif %}
           {% for nomination in position.nomination_set.all %}
           <li>
-            {{ nomination.name }}
-            {% if nomination.nickname %}
-            ({{ nomination.nickname }})
+            {% if perms.ecsswebauth.is_ecs_user %}
+            <div class="d-inline-flex support">
+              <i class="fas fa-spinner fa-pulse loading" hidden></i>
+              {% if nomination|is_supporting:user %}
+              <i class="fas fa-heart supporting" aria-label="Currently supporting {{ nomination.name }} for {{ nomination.position.name }}"></i>
+              <form method="POST" action="{% url 'election:support' election.codename position.codename %}" hidden>
+              {% else %}
+              <i class="fas fa-heart supporting" aria-label="Currently supporting {{ nomination.name }} for {{ nomination.position.name }}" hidden></i>
+              <form method="POST" action="{% url 'election:support' election.codename position.codename %}">
+              {% endif %}
+                {% csrf_token %}
+                <input type="hidden" name="nomination" value="{{ nomination.uuid }}">
+                <button type="submit" class="support-button" aria-label="Support {{ nomination.name }} for {{ nomination.position.name }}">
+                  <i class="far fa-heart" aria-hidden="true"></i>
+                </button>
+              </form>
+            </div>
             {% endif %}
+            <div class="d-inline-flex">
+              {{ nomination.name }}
+              {% if nomination.nickname %}
+              ({{ nomination.nickname }})
+              {% endif %}
+            </div>
           </li>
           {% endfor %}
         </ul>
@@ -65,4 +112,47 @@
     {% endfor %}
   </div>
 </section>
+{% endblock %}
+
+{% block pagescript %}
+{{ block.super }}
+<script>
+$('#description-checkbox').change(function() {
+  if (this.checked) {
+    $('.position-description').prop('hidden', false);
+  } else {
+    $('.position-description').prop('hidden', true);
+  }
+});
+
+$.ajaxSetup({
+  headers: {
+    'Accept': 'application/json'
+  }
+});
+$('.support form').submit(function(event) {
+  event.preventDefault();
+  var form = $(this);
+  var action = form.attr('action');
+  form.prop('hidden', true);
+  var loading = form.parent().find('.loading')
+  loading.prop('hidden', false);
+  $.post(action, form.serialize(), function() {
+  })
+  .done(function() {
+    loading.prop('hidden', true);
+    form.parent().parent().parent().find('.supporting').each(function() {
+      $(this).prop('hidden', true);
+    });
+    form.parent().parent().parent().find('form').each(function() {
+      $(this).prop('hidden', false);
+    });
+    form.prop('hidden', true);
+    form.parent().find('.supporting').prop('hidden', false);
+  })
+  .fail(function() {
+    alert('Failed to support');
+  });
+});
+</script>
 {% endblock %}
