--- a/election/templates/election/nomination.html
+++ b/election/templates/election/nomination.html
@@ -18,6 +18,11 @@
   background: none;
   border: none;
   color: darkred;
+  cursor: pointer;
+}
+
+.support button:hover {
+  color: #d82129;
 }
 </style>
 {% endblock %}
