Explain support button

--- a/election/templates/election/nomination.html
+++ b/election/templates/election/nomination.html
@@ -50,6 +50,9 @@
   <p>
     You are able to nominate yourself for as many roles, and each nomination requires at least two supports before the nomination closes. You are able to support one nomination for each role and change your support before the nomination closes.
   </p>
+  <p>
+    Click on heart icons <i class="far fa-heart"></i> next to names to support their nomination.
+  </p>
   {% endif %}
   <div>
     <b>Nomination ends on {{ election.nomination_end|date }} {{ election.nomination_end|time:"H:i" }}.</b>
