--- a/election/templates/election/support.html
+++ b/election/templates/election/support.html
@@ -33,7 +33,7 @@
       </form>
       <div class="small text-muted mt-3">
         <p>
-          You are able to support one nomination for each role and change your support before nomination closes.
+          You are able to support one nomination for each role and you can change your support before nomination closes.
         </p>
       </div>
       {% endif %}
