Fix load templatetags

--- a/election/templates/election/nomination.html
+++ b/election/templates/election/nomination.html
@@ -1,6 +1,7 @@
 {% extends 'portal/base.html' %}
 
 {% load static %}
+{% load website_extra %}
 {% load election_extra %}
 
 {% block title %}Elections - ECSS{% endblock %}
