--- a/election/templates/election/position.html
+++ b/election/templates/election/position.html
@@ -18,10 +18,31 @@
   height: 14rem;
   overflow: scroll;
 }
+.manifesto pre {
+  white-space: pre-wrap;
+}
 </style>
 {% endblock %}
 
 {% block portalcontent %}
+{% if messages %}
+<div class="mt-3">
+  {% for message in messages %}
+  {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+  <div class="alert alert-danger">
+  {{ message }}
+  </div>
+  {% else %}
+  <div class="alert alert-success">
+  {{ message }}
+  </div>
+  {% endif %}
+  {% endfor %}
+</div>
+{% endif %}
+<div class="mt-2">
+  <a href="{% url 'election:election' position.election.codename %}"><i class="fas fa-arrow-circle-left"></i> {{ position.election.name }}</a>
+</div>
 <section>
   <h1>{{ position.election.name }}</h1>
   <p>
@@ -73,7 +94,59 @@
         {% if position|has_voted:user %}
         <p>You have already voted for {{ position.name }}.</p>
         {% else %}
-        Voting goes here...
+        <form action="{% url 'election:vote' position.election.codename position.codename %}" method="POST" onsubmit="return validateVoteForm()">
+          <p>
+            Please rank the candidates for {{ position.name }}, where 1 means the candidate is the most preferred and {{ nominations|length|add:'1' }} for the least preferred. You can also vote for Re-Open Nomination. You can and need to assign each number to only one candidate.
+          </p>
+          <p>
+            <strong>You will not be able to change your vote after it has been submitted.</strong>
+          </p>
+          {% csrf_token %}
+          <div class="form-group list-group list-group-flush">
+            {% for nomination in nominations %}
+            <div class="list-group-item row vote-nomination-item">
+              <label class="col-5">
+                {{ nomination.name }}
+                {% if nomination.nickname %}
+                <br>({{nomination.nickname}})
+                {% endif %}
+              </label>
+              {% for n in nominations %}
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="{{ nomination.uuid }}" id="{{ nomination.uuid}}Radio{{ forloop.counter }}" value="{{ forloop.counter }}">
+                <label class="form-check-label" for="{{ nomination.uuid}}Radio{{ forloop.counter }}">
+                  {{ forloop.counter }}
+                </label>
+              </div>
+              {% endfor %}
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="{{ nomination.uuid }}" id="{{ nomination.uuid}}Radio{{ nominations|length|add:'1' }}" value="{{ nominations|length|add:'1' }}">
+                <label class="form-check-label" for="{{ nomination.uuid}}Radio">
+                    {{ nominations|length|add:'1' }}
+                </label>
+              </div>
+            </div>
+            {% endfor %}
+            <div class="list-group-item row vote-nomination-item">
+              <label class="col-5">Re-Open Nomination</label>
+              {% for n in nominations %}
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="ron" id="{{ nomination.uuid}}Radio{{ forloop.counter }}" value="{{ forloop.counter }}">
+                <label class="form-check-label" for="{{ nomination.uuid}}Radio{{ forloop.counter }}">
+                  {{ forloop.counter }}
+                </label>
+              </div>
+              {% endfor %}
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="ron" id="ronRadio{{ nominations|length|add:'1' }}" value="{{ nominations|length|add:'1' }}">
+                <label class="form-check-label" for="ronRadio">
+                    {{ nominations|length|add:'1' }}
+                </label>
+              </div>
+            </div>
+          </div>
+          <input type="submit" value="Submit vote for {{ position.name }}" class="btn btn-ecssweb mt-1">
+        </form>
         {% endif %}
         {% endif %}
       </div>
@@ -84,5 +157,31 @@
 
 {% block pagescript %}
 {{ block.super }}
-
+<script>
+function validateVoteForm() {
+  let voteNominationItems = $('.vote-nomination-item');
+  let num_nominations = voteNominationItems.length;
+  let ranks = Array(num_nominations);
+  for (var i = 1; i < num_nominations + 1; i++) {
+    ranks[i - 1] = i.toString();
+  }
+  ranks = new Set(ranks);
+  let errMsg = 'Please give unique rank to each nomination.';
+  for (var i = 0; i < num_nominations; i++) {
+    var selectedRankButton = $(voteNominationItems[i]).find('input:radio:checked');
+    if (selectedRankButton.length != 1) {
+      event.preventDefault();
+      alert(errMsg);
+      return;
+    }
+    selectedRank = $(selectedRankButton[0]).val();
+    if (!ranks.has(selectedRank)) {
+      event.preventDefault();
+      alert(errMsg);
+      return;
+    }
+    ranks.delete(selectedRank);
+  }
+}
+</script>
 {% endblock %}
